# hue

./: Cargo.toml  README.md
.github/workflows/: rust.yml
hue-cli/: .gitignore  Cargo.toml  config.example.toml
hue-cli/src/: main.rs
hue-core/: .gitignore  Cargo.toml  config.example.toml
hue-core-wasm/: .gitignore  Cargo.toml  README.md  index.js  package-lock.json  package.json
hue-core-wasm/src/: lib.rs
hue-core/src/: lib.rs
hue-web-app/: config.example.js  index.html  index.js  package-lock.json  package.json
src/: main.rs
