[package]
name = "hue_core_wasm"
version = "0.1.1"
authors = ["lucashorward <lucas.horward@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
hue_core = {path = "../hue-core", version = "0.13"}
config = "0.9"
wasm-bindgen-futures = "0.4.1"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0.101", features = ["derive"] }
serde_derive = "^1.0.59"
serde_json = "1.0.41"
wasm-bindgen = { version = "0.2.51", features = ["serde-serialize"]  }
console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
