[package]
name = "hue_core"
version = "0.13.0"
authors = ["lucashorward <lucas.horward@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
config = "0.9"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0.101", features = ["derive"] }
serde_derive = "^1.0.59"
serde_json = "1.0.41"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"]  }
wasm-bindgen-futures = "0.4.1"